# IN54-Project

./: CMakeLists.txt  README.md  résultat.csv  résultat.xls  résultat.xlsx
src/: decisiontaker.hpp  eye.hpp  eyeclassifier.hpp  eyefinder.hpp  face.hpp  facefinder.hpp  imgparser.hpp  main.cpp  orientation.hpp  orientationdetector.hpp  orientationdetector1.hpp  orientationdetector2.hpp  outputeyes.txt  preprocessing.hpp  processer.hpp  str.hpp
src/images/: detection.m  detection.m~
test-reconnaissance/: images-test
